remove kbmanager